# nixcfg

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  flake.nix
drivers/gleam/nixcfg/: gleam.toml  manifest.toml  schema.json
drivers/gleam/nixcfg/src/: example_mycel.gleam  nixcfg.gleam
drivers/rust/: Cargo.toml
drivers/rust/example-mycel/: Cargo.toml
drivers/rust/example-mycel/src/: main.rs
drivers/rust/nixcfg/: Cargo.toml
drivers/rust/nixcfg-derive/: Cargo.toml
drivers/rust/nixcfg-derive/src/: lib.rs
drivers/rust/nixcfg/src/: lib.rs
examples/: complex.json  mycel.json
gleam/nixcfg/: README.md
gleam/nixcfg/test/: nixcfg_test.gleam
nix/: checks.nix  debug.nix  devshell.nix  from-options.nix  gleam.nix  lib.nix  modular-service.nix  package.nix  rust-checks.nix
rust/: Cargo.toml
schema/: v1.md
