[package]
name = "example-mycel"
version.workspace = true
edition = "2024"
description = "demo: emit a nixcfg schema from a Config struct"
license = "MIT OR Apache-2.0"
publish = false

[[bin]]
name = "example-mycel"
path = "src/main.rs"

[dependencies]
nixcfg = { path = "../nixcfg" }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
