[package]
name = "nixcfg"
version = "0.3.0"
edition = "2024"
description = "bridge config structs to NixOS module options via JSON Schema"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
nixcfg-derive = { version = "0.3.0", path = "../nixcfg-derive" }
